Added many new bundles,added front,made admin panel

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,18 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+home:
+  path: /
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/homePage.html.twig
+aboutUs:
+  path: /aboutUs
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/aboutUsPage.html.twig
+services:
+  path: /services
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/servicesPage.html.twig
