--- a/.env
+++ b/.env
@@ -22,5 +22,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/db_octo
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=gmail://OctoWice@gmail.com:FgrTyhGdbhGggTTTyH36452Y@localhost?encryption=tls&auth_mode=oauth
 ###< symfony/swiftmailer-bundle ###
