--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "@symfony/webpack-encore": "^0.22.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -16,6 +17,9 @@
         "@ckeditor/ckeditor5-media-embed": "^10.1.0",
         "es5": "^1.0.0",
         "jquery": "^3.3.1",
-        "jquery-mask-plugin": "^1.14.15"
+        "jquery-mask-plugin": "^1.14.15",
+        "prop-types": "^15.6.2",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0"
     }
 }
