--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -16,3 +16,8 @@ services:
   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
   defaults:
     template: pages/servicesPage.html.twig
+choiceService:
+  path: /choiceService
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/choiceServicePage.html.twig
