--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^11.2.0",
         "@ckeditor/ckeditor5-media-embed": "^10.1.0",
+        "composer": "^4.1.0",
         "es5": "^1.0.0",
         "jquery": "^3.3.1",
         "jquery-mask-plugin": "^1.14.15",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
-        "react-dom": "^16.7.0"
+        "react-dom": "^16.7.0",
+        "yarn": "^1.13.0"
     }
 }
