--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "es5": "^1.0.0",
         "jquery": "^3.3.1",
         "jquery-mask-plugin": "^1.14.15",
+        "less": "^3.9.0",
         "prop-types": "^15.6.2",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
