--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -21,3 +21,28 @@ choiceService:
   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
   defaults:
     template: pages/newServicesPage.html.twig
+business:
+  path: /businessPage
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/newBusinesSite.html.twig
+designPage:
+  path: /designPage
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/newBusinesSite.html.twig
+landingPage:
+  path: /landingPage
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/newLandingPage.html.twig
+seoPage:
+  path: /seoPage
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/newSEOPage.html.twig
+siteDirectory:
+  path: /seoPage
+  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+  defaults:
+    template: pages/newSiteDirectory.html.twig
