--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,43 +6,43 @@ home:
   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
   defaults:
     template: pages/homePage.html.twig
-aboutUs:
-  path: /aboutUs
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/aboutUsPage.html.twig
+#aboutUs:
+#  path: /aboutUs
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/aboutUsPage.html.twig
 services:
   path: /services
   controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
   defaults:
     template: pages/servicesPage.html.twig
-cardSite:
-  path: /services/cardSite
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/newServicesPage.html.twig
-business:
-  path: /services/storeSite
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/newBusinesSite.html.twig
-designPage:
-  path: /services/designPage
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/newDesignPage.html.twig
-landingPage:
-  path: /services/landingPage
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/newLandingPage.html.twig
-seoPage:
-  path: /services/seoPage
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/newSEOPage.html.twig
-siteDirectory:
-  path: /services/directorySite
-  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
-  defaults:
-    template: pages/newSiteDirectory.html.twig
+#cardSite:
+#  path: /services/cardSite
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/newServicesPage.html.twig
+#business:
+#  path: /services/storeSite
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/newBusinesSite.html.twig
+#designPage:
+#  path: /services/designPage
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/newDesignPage.html.twig
+#landingPage:
+#  path: /services/landingPage
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/newLandingPage.html.twig
+#seoPage:
+#  path: /services/seoPage
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/newSEOPage.html.twig
+#siteDirectory:
+#  path: /services/directorySite
+#  controller: Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+#  defaults:
+#    template: pages/newSiteDirectory.html.twig
